--- a/SuperShop.Prism/SuperShop.Prism.Android/SuperShop.Prism.Android.csproj
+++ b/SuperShop.Prism/SuperShop.Prism.Android/SuperShop.Prism.Android.csproj
@@ -61,6 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator.Android">
+      <Version>19.2.0.59</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
     </PackageReference>
