--- a/SuperShop.Prism/SuperShop.Prism.iOS/SuperShop.Prism.iOS.csproj
+++ b/SuperShop.Prism/SuperShop.Prism.iOS/SuperShop.Prism.iOS.csproj
@@ -198,6 +198,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator.IOS">
+      <Version>19.2.0.59</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
     </PackageReference>
